Add meta tag for google search results

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Portfolio</title>
   <base href="/">
+
+  <meta name="description" content="Dive into my professional portfolio, highlighting my expertise in .NET, Angular, Azure, and SQL Server. Discover my career milestones, educational background, innovative side projects, and contact information. Explore my journey and deep-rooted skills.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
